[gd_scene load_steps=8 format=3 uid="uid://c8xqhohqwchch"]

[ext_resource type="Script" uid="uid://dvh8rnno5wuxs" path="res://scripts/GarageManager.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dxmdesd0hngce" path="res://scenes/garage/garage.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bvn8x7y203a1c" path="res://scenes/ui/garage_computer_ui.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c4d8faf0a1b2c" path="res://scenes/ui/repair_interaction_ui.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://ipjdvqjhnvk4" path="res://scenes/ui/pause_menu.tscn" id="4_ytxwb"]
[ext_resource type="PackedScene" uid="uid://0bt5jyw2m8r" path="res://scenes/managers/repair_progress_manager.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://bc1du7kqxtobs" path="res://scenes/managers/waiting_slot_manager.tscn" id="6"]

[node name="main_garage" type="Node2D"]
script = ExtResource("1")

[node name="garage" parent="." instance=ExtResource("2")]
position = Vector2(-2, 5)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RepairInteractionUI" parent="UI" instance=ExtResource("4")]
layout_mode = 1
offset_left = 427.0
offset_top = -130.0
offset_right = 927.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="GarageComputerUI" parent="UI" instance=ExtResource("3")]
layout_mode = 1
offset_left = 431.0
offset_top = 86.0
offset_right = 833.0
offset_bottom = 373.0

[node name="PauseMenu" parent="UI" instance=ExtResource("4_ytxwb")]
layout_mode = 1
offset_left = 102.0
offset_top = 300.0
offset_right = 102.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="RepairProgressManager" parent="." instance=ExtResource("5")]

[node name="WaitingSlotManager" parent="." instance=ExtResource("6")]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(125, 135)
